# AI-OS

./: .gitignore  0001-feat-runtime-introduce-canonical-runtime-scheduler.patch  AGENTS.md  AI_OS_MASTER_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
docs/00_Project/: AI_OS_CONSTITUTION.md  ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  ROADMAP.md
docs/ADR/: ADR-001-unified-runtime-contract.md  ADR-002-runtime-lifecycle-operations.md
docs/Milestones/: P9-M1_UNIFIED_RUNTIME.md
scripts/milestones/: p10_m1_task_domain.sh  p10_m2_task_lifecycle.sh  p10_m3_planner_domain.sh  p10_m4_planner_repository.sh
src/: App.css  App.js  App.tsx  App.tsx.prompt-library.bak  constants.js  constants.ts  main.js  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  health.rs  lib.rs  logs.rs  main.rs  mcp.rs  models.rs  multillm.rs  openclaw.rs  stop.rs
src-tauri/src/planner/: domain.rs  mod.rs  repository.rs  validation.rs
src-tauri/src/runtime/: adapters.rs  bulk.rs  executor.rs  ipc.rs  lifecycle.rs  mod.rs  models.rs  operations.rs  recovery.rs  registry.rs  scheduler.rs
src-tauri/src/task_engine/: domain.rs  events.rs  lifecycle.rs  mod.rs  repository.rs
src/components/: CommandPalette.tsx  ConfirmDialog.css  ConfirmDialog.tsx  DialogProvider.css  DialogProvider.tsx  Header.js  Header.tsx  InlineAlert.css  InlineAlert.tsx  MarkdownRenderer.tsx  MetricCard.js  MetricCard.tsx  ProviderErrorCard.tsx  ServiceRow.js  (+15 more)
(+80 files in other folders)
