[package]
name = "dashboard"
version = "1.2.0"
description = "AI OS Personal AI Workspace"
authors = ["Russell Chen"]
edition = "2021"

[lib]
name = "dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
flate2 = "1"
tar = "0.4"
tempfile = "3"

tungstenite = {
  version = "0.27",
  features = ["native-tls"]
}

url = "2"

[profile.dev]
incremental = true
debug = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
incremental = false
debug = false
overflow-checks = false
